Java Script Added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Share+Tech|Share+Tech+Mono" rel="stylesheet" />
-    <title>Designs by Laighlin</title>
+    <title>Designs by Muthu</title>
     <script src="js/myscript.js"></script>
     <link rel="stylesheet" href="css/mystyle.css">
 </head>
